modules/gdscript/tests/scripts/runtime/errors/typed_array_assign_basic_to_typed.gd
func test():
	var basic := [1]
	var typed: Array[int] = basic
	print('not ok')
